--- a/pages/about.html
+++ b/pages/about.html
@@ -59,7 +59,7 @@
 <tbody>
 <tr>
 <td align="center">171753897</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4f479e1f61d10422aabf947f03da202ea87ed21.jpg" />建丰同志，我是曾可达</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4f479e1f61d10422aabf947f03da202ea87ed21.jpg" />临港大乌贼</td>
 <td align="center">一号位 SOLO</td>
 </tr>
 <tr>
@@ -69,7 +69,7 @@
 </tr>
 <tr>
 <td align="center">138060623</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />深海比目鱼</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />三灶湄公鱼</td>
 <td align="center">三号位 辅助</td>
 </tr>
 <tr>
@@ -81,11 +81,6 @@
 <td align="center">132888348</td>
 <td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/86/8682b1ca955dc52353e14b2c458bb2d23928f397.jpg" />椅子人毛</td>
 <td align="center">SOLO 辅助</td>
-</tr>
-<tr>
-<td align="center">157934874</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/8b/8b543d88e1d179d26a86331e2387b0ca8b7a1c18.jpg" />水产批发商</td>
-<td align="center">辅助</td>
 </tr>
 </tbody>
 </table>
