--- a/pages/about.html
+++ b/pages/about.html
@@ -78,9 +78,9 @@
 <td align="center">三号位 辅助</td>
 </tr>
 <tr>
-<td align="center">132888348</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/86/8682b1ca955dc52353e14b2c458bb2d23928f397.jpg" />椅子人毛</td>
-<td align="center">SOLO 辅助</td>
+<td align="center">157934874</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/8b/8b543d88e1d179d26a86331e2387b0ca8b7a1c18.jpg" />大团锦鲤鱼</td>
+<td align="center">辅助</td>
 </tr>
 </tbody>
 </table>
