--- a/pages/about.html
+++ b/pages/about.html
@@ -74,7 +74,7 @@
 </tr>
 <tr>
 <td align="center">136073540</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/0c/0c9d94eb7d35fc17218cd321b3a222d59e666bd5.jpg" />远古虎纹鲨</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/0c/0c9d94eb7d35fc17218cd321b3a222d59e666bd5.jpg" />My head is hard</td>
 <td align="center">三号位 辅助</td>
 </tr>
 <tr>
